# wolfram-nasa-hackathon-2025

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose-dev.yml  index.html  readme.md  ruff.toml
.github/workflows/: deploy.yml
EarthDataTools/: PacletInfo.wl  README.md
EarthDataTools/Kernel/: EarthDataTools.wl
Notebooks/: EarthDataTools-Dev.nb
assets/: index-B5U-og4z.css  index-BkicN1mQ.css  index-DcCBOvuo.css
data_fetcher/: main.py  pyproject.toml
data_fetcher/realtime_phytoplankton_populations/: PACE_OCI.20250801.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250801.L4m.DAY.MOANA.V3_1.4km.NRT.nc  PACE_OCI.20250802.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250803.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250804.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250805.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250806.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250807.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250808.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  PACE_OCI.20250809.L4m.DAY.MOANA.V3_1.0p1deg.NRT.nc  (+55 more)
docker/: backend.Dockerfile  backend.EntryPoint.sh  frontend.Dockerfile
frontend/: .dockerignore  .env.production  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.vite.json  vite.config.ts
nasa_example_notebooks/: oci_terrestrial_data.ipynb
python_notebooks/: chlorophyll_processing.ipynb  mesoscale_eddies.ipynb  phytoplankton_processing.ipynb  pyproject.toml  temperature_processing.ipynb
scripts/: FetchUtils.wl  README.md  fetch_collection.wl  search_collections.wl
(+882 files in other folders)
