[project]
name = "python-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "dask>=2025.9.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "h5netcdf>=1.6.4",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "metpy>=1.7.1",
    "mplleaflet>=0.0.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.3",
    "oceanspy>=0.3.5",
    "rioxarray>=0.19.0",
    "scikit-image>=0.25.2",
    "scipy>=1.16.2",
    "xarray>=2025.9.1",
]
